--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <header>
         <h1>My AI Notebook</h1>
+        <p>Writing about AI (not with AI)</p>
     </header>
     <main>
         <nav>
             <ul>
-                <li><a href="post1.html">Post 1: The Journey Begins</a></li>
-                <li><a href="post2.html">Post 2: Exploring New Tools</a></li>
-                <li><a href="post3.html">Post 3: Reflections on Learning</a></li>
+                <li><a href="post3.html">3 A guiding principle</a></li>
+                <li><a href="post2.html">2 Another thing I'm doing</a></li>
+                <li><a href="post1.html">1 This site</a></li>
             </ul>
         </nav>
     </main>
