--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post4.html">4 Something that puzzles me</a></li>
                 <li><a href="post3.html">3 A guiding principle</a></li>
                 <li><a href="post2.html">2 Another thing I'm doing</a></li>
                 <li><a href="post1.html">1 This site</a></li>
