--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </main>
     <footer>
-        <p>&copy; 2025 My AI Notebook</p>
+        <p>&copy;2025 Daniel Plate</p>
     </footer>
 </body>
 </html>
