--- a/post1.html
+++ b/post1.html
@@ -21,7 +21,7 @@
         </article>
     </main>
     <footer>
-        <p>&copy; 2025 My AI Notebook</p>
+        <p>&copy;2025 Daniel Plate</p>
     </footer>
 </body>
 </html>
