--- a/post4.html
+++ b/post4.html
@@ -72,7 +72,7 @@ BLD   I am a complete wreck
         </article>
     </main>
     <footer>
-        <p>&copy; 2025 My AI Notebook</p>
+        <p>&copy;2025 Daniel Plate</p>
     </footer>
 </body>
 </html>
