added first barenholtz ellul enoch post

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post6.html">6 The ghost in my own machine</a></li>
                 <li><a href="post5.html">5 Wrong all this time about the hollow men</a></li>
                 <li><a href="post4.html">4 Something that puzzles me</a></li>
                 <li><a href="post3.html">3 A guiding principle</a></li>
