--- a/post5.html
+++ b/post5.html
@@ -10,11 +10,14 @@
 <body>
     <header>
         <h1>My AI Notebook</h1>
-    </header>    
+    </header>
     <main>
         <article>
-            <h2>5 Wrong all this time about the hollow men</h2>
-            <p>I'm pretty sure T.S. Eliot was writing <a href="https://poets.org/poem/hollow-men">his poem</a> (and <a href="https://www.poetryfoundation.org/poems/47311/the-waste-land">the other one</a> (especially the unreal city part)) about the now pretty much almost dead internet.</p>
+            <h2>5 Starting...now</h2>
+            <p>There's this very annoying thing I can't help. Every few months, sometimes more often, I take all the folders on my computer I use for writing and put them in a folder titled something like, "Old - August 5, 2005" (or whatever the date is). Then I start over.</p>
+            <p>I love the feeling of clearing room, starting from scratch. But it's very destructive to every version of me that predates the present. Still, I really can't help it.</p>
+            <p>There's another phrase that might seem like the opposite of "Starting...now." It's "I just keep going." One foot after another, that sort of thing. But those two phrases ("starting...now" and "I just keep going") have more in common than you might think.</p>
+            <p>That's what I've decided I'm going to for real very seriously write about...starting now.</p>
             <a href="index.html">Back to Home</a>
         </article>
     </main>
