--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My AI Notebook</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display.swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,9 +14,12 @@
     <main>
         <nav>
             <ul>
+                <!-- <li><a href="post9.html">9 A terrible and magnificent vision</a></li>
+                <li><a href="post8.html">8 A beautiful and terrifying idea</a></li>
                 <li><a href="post7.html">7 A technology of transgression</a></li>
                 <li><a href="post6.html">6 The ghost in my own machine</a></li>
-                <li><a href="post5.html">5 Wrong all this time about the hollow men</a></li>
+                <li><a href="post5.html">5 Wrong all this time about the hollow men</a></li> -->
+                <li><a href="post5.html">5 Starting...now</a></li>
                 <li><a href="post4.html">4 Something that puzzles me</a></li>
                 <li><a href="post3.html">3 A guiding principle</a></li>
                 <li><a href="post2.html">2 Another thing I'm doing</a></li>
