made it more about aesthetics and romantics

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <main>
         <nav>
             <ul>
-                <li><a href="post7.html">7 Or maybe Foucault</a></li>
-                <li><a href="post6.html">6 Ellul</a></li>
+                <li><a href="post8.html">8 Something online about the soul of art</a></li>
+                <li><a href="post7.html">7 Only humans</a></li>
+                <li><a href="post6.html">6 Two things I reject</a></li>
                 <li><a href="post5.html">5 Starting...now</a></li>
                 <li><a href="post4.html">4 Something that puzzles me</a></li>
                 <li><a href="post3.html">3 A guiding principle</a></li>
