--- a/old-posts/old-old-post6.html
+++ b/old-posts/old-old-post6.html
@@ -13,12 +13,15 @@
     </header>
     <main>
         <article>
-            <h2>6 Two things I reject</h2>
-            <p>Two things I reject as basic to art: originality and authenticity. My reasons are easy to state simply.</p>
-            <p>Originality - if art has to be original in order to count as art, then almst nobody makes art because almost nothing is actually original.</p>
-            <p>Authenticity - if authenticity is the measure of art, then the personal diary of a 13 or 14-year old working out their feelings is the highest form of art.</p>
+            <h2>6 Ellul</h2>
+            <p>I've been reading <a href="https://en.wikipedia.org/wiki/Propaganda:_The_Formation_of_Men%27s_Attitudes"><em>Propaganda</em> by Jacques Ellul.</a> I find him very helpful in thinking about AI and the typical conversations out there about AI.</p>
+            <p>I'm thinking I'll write up a few things about what Ellul would say about</p>
+            <ul>
+                <li>misinformation</li>
+                <li>bias</li>
+                <li>regulation</li>
+            </ul>
             <a href="index.html">Back to Home</a>
-
         </article>
     </main>
     <footer>
