--- a/old-posts/old-oldpost7.html
+++ b/old-posts/old-oldpost7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post 6 - My AI Notebook</title>
+    <title>Post 7 - My AI Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
@@ -13,12 +13,10 @@
     </header>
     <main>
         <article>
-            <h2>6 Two things I reject</h2>
-            <p>Two things I reject as basic to art: originality and authenticity. My reasons are easy to state simply.</p>
-            <p>Originality - if art has to be original in order to count as art, then almst nobody makes art because almost nothing is actually original.</p>
-            <p>Authenticity - if authenticity is the measure of art, then the personal diary of a 13 or 14-year old working out their feelings is the highest form of art.</p>
+            <h2>7 Or maybe Foucault</h2>
+            <p>Foucault might be better. Ellul's attacks on AI are pretty clear. I think they're really powerful too. But I'm not sure how hard they are to understand, so it might not be worth the effort to write about them. People can just go directly to Ellul and see what he says. Which is plenty.</p>
+            <p>Foucault on the other hand? It's not so simple just to "go to Foucault and see what he says."</p>
             <a href="index.html">Back to Home</a>
-
         </article>
     </main>
     <footer>
