4 kinds of evil

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post9.html">9 Four ideas of evil</a></li>
                 <li><a href="post8.html">8 Something online about the soul of art</a></li>
                 <li><a href="post7.html">7 Only humans</a></li>
                 <li><a href="post6.html">6 Two things I reject</a></li>
