drafts of evil posts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <main>
         <nav>
             <ul>
-                <li><a href="post9.html">9 Four ideas of evil</a></li>
+                <li><a href="post12.html">12 Evil as Imitative Negation (after Mac Loftin)</a></li>
+                <li><a href="post11.html">11 Evil as Frustrated Ends (after New Polity)</a></li>
+                <li><a href="post10.html">10 Evil as Systemic Harm (after Philosophy Tube)</a></li>
+                <li><a href="post9.html">9 Romantic Evil (after Isaiah Berlin)</a></li>
                 <li><a href="post8.html">8 Something online about the soul of art</a></li>
                 <li><a href="post7.html">7 Only humans</a></li>
                 <li><a href="post6.html">6 Two things I reject</a></li>
