revised evil pages

--- a/post10.html
+++ b/post10.html
@@ -15,13 +15,12 @@
         <article>
             <h2>10 Evil as Systemic Harm (after Philosophy Tube)</h2>
 
-<h3>Preface</h3>
-<p>This page distills a general account of evil implicit in Philosophy Tube’s “AI is an Ethical Nightmare,” then applies it to AI.</p>
+<p>Here's a general account of evil as I find it in Philosophy Tube’s <a href="https://www.youtube.com/watch?v=AaU6tI2pb3M&t=1s">“AI is an Ethical Nightmare,”</a>. As a test, I then apply it to AI.</p>
 
-<h3>General Definition</h3>
-<p><strong>Evil = systemic harm sustained by opaque power.</strong> Evil names arrangements that concentrate power, <em>hide</em> how decisions are made, project false meanings onto bodies, externalize environmental costs, and deskill or atomize labor—thereby denying people material safety, agency, and recourse.</p>
+<h3>Definition</h3>
+<p><strong>Evil = systemic harm sustained by opaque power.</strong> Evil names arrangements that concentrate power, hide how decisions are made, project false meanings onto bodies, externalize environmental costs, and deskill or atomize labor. All of which denies people material safety, agency, and recourse.</p>
 
-<h3>Constituent Features</h3>
+<h3>Features</h3>
 <ul>
 <li><strong>Opacity:</strong> black‑box systems that deny meaningful explanation and remedy.</li>
 <li><strong>Projection:</strong> technologies that impose categories onto people (e.g., gender/race) and treat those labels as truths.</li>
@@ -30,10 +29,10 @@
 <li><strong>Ideology:</strong> hype and marketing that pre‑empt democratic debate and accountability.</li>
 </ul>
 
-<h3>How AI Is Evil (on this view)</h3>
+<h3>Why AI Is Evil</h3>
 <ul>
 <li><strong>Fair‑washing &amp; black boxes:</strong> inscrutable models + surrogate “explanations” launder biased outcomes.</li>
-<li><strong>Digital epidermalization:</strong> face/gender recognition that <em>assigns</em> meaning to your body and can enable humiliation and harm.</li>
+<li><strong>Digital epidermalization:</strong> face/gender recognition that assigns meaning to your body and can enable humiliation and harm.</li>
 <li><strong>Data flattening:</strong> scraping human work and images without consent; remixing them as “content.”</li>
 <li><strong>Sub‑employment:</strong> globally distributed, surveilled microwork that pays little and offers no power or recourse.</li>
 <li><strong>Dirty material base:</strong> mining, energy use, and supply chains packaged as “clean.”</li>
