--- a/post11.html
+++ b/post11.html
@@ -15,30 +15,29 @@
         <article>
             <h2>11 Evil as Frustrated Ends (after New Polity)</h2>
 
-<h3>Preface</h3>
-<p>This page abstracts the New Polity argument into a general account of evil and then considers AI in that light.</p>
+<p>This is based on a <a href="https://www.youtube.com/watch?v=YuNJchmnMzI&t=3655s">conversation from New Polity</a>. Like with my last post, I start by explaining their general account of evil and then show how they apply it to AI.</p>
 
-<h3>General Definition</h3>
-<p><strong>Evil = privation of an act’s natural end.</strong> Human acts have built‑in purposes (<em>teloi</em>). Evil names designs and uses that <em>elicit</em> those acts while <em>frustrating</em> their ends—forming vice. Chief example: conversation, whose end is <em>communion with another person</em>.</p>
+<h3>Definition</h3>
+<p><strong>Evil = privation of an act’s natural end.</strong> Human acts have built‑in purposes (<em>teloi</em>). Evil names designs and uses that elicit those acts while frustrating their ends. This is what makes vice. Chief example: conversation, whose end is communion with another person.</p>
 
-<h3>Constituent Features</h3>
+<h3>Features</h3>
 <ul>
 <li><strong>Simulacrum:</strong> performing the form of an act (e.g., dialogue) without its substance (a someone who answers).</li>
 <li><strong>Asymmetry:</strong> habituating one‑sided exposure without reciprocal responsibility or vulnerability.</li>
 <li><strong>Misalignment:</strong> treating persons as means or as data; attenuating truth‑telling and promise‑keeping.</li>
-<li><strong>Deformation:</strong> repeated frustrated acts reshape character—toward cynicism, dependency, and untruth.</li>
+<li><strong>Deformation:</strong> repeated frustrated acts reshape character toward cynicism, dependency, and untruth.</li>
 </ul>
 
-<h3>How AI Is Evil (on this view)</h3>
+<h3>Why AI Is Evil</h3>
 <ul>
-<li><strong>Chat simulation:</strong> chatbots elicit our conversational vulnerability while withholding real personhood—frustrating communion.</li>
+<li><strong>Chat simulation:</strong> chatbots elicit our conversational vulnerability while withholding real personhood. This frustrates communion.</li>
 <li><strong>Analogy to lying:</strong> dialogue’s form without interior truthfulness degrades the virtue of speech.</li>
 <li><strong>One‑way intimacy:</strong> users reveal themselves; the system cannot do the same, yet retains their disclosures as “data.”</li>
 <li><strong>Habit formation:</strong> such use trains dispositions (toward flattery, passivity, and instrumental reason) at odds with honesty and love.</li>
 </ul>
 
 <h3>Moral Center</h3>
-<p>Goodness is truthful conversation ordered to real communion—mutual self‑gift before a someone who can answer and be responsible.</p>
+<p>Goodness is truthful conversation ordered to real communion. Mutual self‑gift before a someone who can answer and be responsible.</p>
 
             <a href="index.html">Back to Home</a>
         </article>
