--- a/post9.html
+++ b/post9.html
@@ -15,25 +15,24 @@
         <article>
             <h2>9 Romantic Evil (after Isaiah Berlin)</h2>
 
-<h3>Preface</h3>
-<p>This page offers a compact statement of a <em>Romantic</em> account of evil—drawn from Isaiah Berlin’s portrait of Romanticism—without assessing it or contrasting it with rivals. The aim is to articulate the vision from the inside.</p>
+<p>What I've got here is what I'll call my romantic account of evil. It's my own thoughts based on watching <a href="https://www.youtube.com/watch?v=xk2UetWsO-M&t=2s">Isaiah Berlin’s lectures on romanticism</a>. My goal is to clarify what a romantic might think of as evil even if they wouldn't use that word.</p>
 
-<h3>Romantic Evil (after Berlin)</h3>
-<p><strong>Definition:</strong> Evil is any betrayal of <em>vocation</em> and <em>sincerity</em>—a refusal of the singular call that gives a life its shape. It is the willing exchange of destiny for comfort, of tragic seriousness for safety, of living speech for empty forms.</p>
+<h3>Romantic Evil</h3>
+<p><strong>Definition:</strong> Evil is any betrayal of vocation and sincerity. A refusal of the singular call that gives a life its shape. It is the willing exchange of destiny for comfort, of tragic seriousness for safety, of living speech for empty forms.</p>
 
 <h3>Marks of Evil</h3>
 <ul>
 <li><strong>Inauthenticity:</strong> bad faith, selling out, self-betrayal; speaking words one does not inhabit.</li>
 <li><strong>Levelling:</strong> the flattening of irreducible difference into averages, norms, and interchangeable roles.</li>
-<li><strong>Profaned Communion:</strong> “togetherness” without persons—kitsch intimacy that avoids risk and responsibility.</li>
+<li><strong>Profaned Communion:</strong> “togetherness” without persons. Kitsch intimacy that avoids risk and responsibility.</li>
 <li><strong>Cowardice:</strong> fear of the sublime risk where something worth dying for is at stake; preference for the tepid middle.</li>
 <li><strong>Instrumentalism:</strong> treating others (and language) as means, not as free centers that answer and demand answer.</li>
 <li><strong>Mechanical Repetition:</strong> the erosion of meaning by rote forms that no longer reveal an interior life.</li>
-<li><strong>The Anti‑Sublime:</strong> a world without tragedy because nothing ultimate is affirmed—no call, no pledge, no vow.</li>
+<li><strong>The Anti‑Sublime:</strong> a world without tragedy because nothing ultimate is affirmed. No call, no pledge, no vow.</li>
 </ul>
 
 <h3>Moral Center</h3>
-<p>Goodness is integrity: self-gift to one’s call; fidelity under risk; conversation that meets a person as a person; and a willingness to suffer the tragic costs of living in truth. The Romantic conscience prizes the singular, the vowed, the answerable—over comfort, utility, and faceless universals.</p>
+<p>Goodness is integrity: self-gift to one’s call; fidelity under risk; conversation that meets a person as a person; and a willingness to suffer the tragic costs of living in truth. The romantic conscience prizes the singular, the vowed, and the answerable over comfort, utility, and faceless universals.</p>
 
             <a href="index.html">Back to Home</a>
         </article>
