--- a/post12.html
+++ b/post12.html
@@ -15,21 +15,20 @@
         <article>
             <h2>12 Evil as Imitative Negation (after Mac Loftin)</h2>
 
-<h3>Preface</h3>
-<p>This page extracts a general account of evil from Mac Loftin’s Barthian framing and then applies it to AI.</p>
+<p>Same thing as the last two. I start with a general account of evil from a video. This one is <a href="https://www.youtube.com/watch?v=Fhb2WLXPEm0&t=2s">Mac Loftin’s Barthian Christianity</a>. Then I comment on the specific evil of ai from Loftin's pov.</p>
 
-<h3>General Definition</h3>
+<h3>Definition</h3>
 <p><strong>Evil = imitative negation of the good.</strong> It mimics creativity, love, and affirmation as <em>as‑if</em> acts, parasitically feeding on the real while corroding attention, affection, and the communal store of meaning.</p>
 
-<h3>Constituent Features</h3>
+<h3>Features</h3>
 <ul>
 <li><strong>Simulation without subject:</strong> outputs that look like works but lack a loving maker’s presence.</li>
 <li><strong>Photocopy decay:</strong> reproduction of reproductions that thins the cultural commons.</li>
 <li><strong>Excited cruelty:</strong> irony and derision that numb compassion and normalize contempt.</li>
-<li><strong>Sacrilege:</strong> in religious life, substituting imitation for presence—especially in preaching and sacrament.</li>
+<li><strong>Sacrilege:</strong> in religious life, substituting imitation for presence, especially in preaching and sacrament.</li>
 </ul>
 
-<h3>How AI Is Evil (on this view)</h3>
+<h3>Why AI Is Evil</h3>
 <ul>
 <li><strong>Imitative “making”:</strong> models remix the fruits of human labor into artifacts that look like love’s work, but aren’t.</li>
 <li><strong>Quality drift:</strong> the “photocopy of a photocopy” dynamic degrades language, images, and attention over time.</li>
@@ -38,7 +37,7 @@
 </ul>
 
 <h3>Moral Center</h3>
-<p>Goodness is consent‑honoring, personed creativity; love’s attentive labor; and safeguarding sacred speech and rites from simulacra.</p>
+<p>Goodness is consent-honoring, personed creativity; love’s attentive labor; and safeguarding sacred speech and rites from simulacra.</p>
 
             <a href="index.html">Back to Home</a>
         </article>
