back to romantic

--- a/post10.html
+++ b/post10.html
@@ -13,12 +13,12 @@
     </header>
     <main>
         <article>
-            <h2>10 Evil as Systemic Harm (after Philosophy Tube)</h2>
+            <h2>10 Evil as Systemic Harm</h2>
 
-<p>Here's a general account of evil as I find it in Philosophy Tube’s <a href="https://www.youtube.com/watch?v=AaU6tI2pb3M&t=1s">“AI is an Ethical Nightmare,”</a>. As a test, I then apply it to AI.</p>
+<p>Here's a general account of evil as I find it in Philosophy Tube’s <a href="https://www.youtube.com/watch?v=AaU6tI2pb3M&t=1s">“AI is an Ethical Nightmare.</a>” As a test, I then apply it to AI.</p>
 
 <h3>Definition</h3>
-<p><strong>Evil = systemic harm sustained by opaque power.</strong> Evil names arrangements that concentrate power, hide how decisions are made, project false meanings onto bodies, externalize environmental costs, and deskill or atomize labor. All of which denies people material safety, agency, and recourse.</p>
+<p><strong>Evil = systemic harm inflicted by opaque power.</strong> Evil names arrangements that concentrate power, hide how decisions are made, project false meanings onto bodies, externalize environmental costs, and deskill or atomize labor. All of which denies people material safety, agency, and recourse.</p>
 
 <h3>Features</h3>
 <ul>
