--- a/post11.html
+++ b/post11.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <article>
-            <h2>11 Evil as Frustrated Ends (after New Polity)</h2>
+            <h2>11 Evil as Frustrated Ends</h2>
 
 <p>This is based on a <a href="https://www.youtube.com/watch?v=YuNJchmnMzI&t=3655s">conversation from New Polity</a>. Like with my last post, I start by explaining their general account of evil and then show how they apply it to AI.</p>
 
