--- a/post12.html
+++ b/post12.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <article>
-            <h2>12 Evil as Imitative Negation (after Mac Loftin)</h2>
+            <h2>12 Evil as Imitative Negation</h2>
 
 <p>Same thing as the last two. I start with a general account of evil from a video. This one is <a href="https://www.youtube.com/watch?v=Fhb2WLXPEm0&t=2s">Mac Loftin’s Barthian Christianity</a>. Then I comment on the specific evil of ai from Loftin's pov.</p>
 
