--- a/post9.html
+++ b/post9.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <article>
-            <h2>9 Romantic Evil (after Isaiah Berlin)</h2>
+            <h2>9 Romantic Evil</h2>
 
 <p>What I've got here is what I'll call my romantic account of evil. It's my own thoughts based on watching <a href="https://www.youtube.com/watch?v=xk2UetWsO-M&t=2s">Isaiah Berlin’s lectures on romanticism</a>. My goal is to clarify what a romantic might think of as evil even if they wouldn't use that word.</p>
 
