--- a/post16.html
+++ b/post16.html
@@ -14,7 +14,7 @@
     <main>
         <article>
             <h2>16 Propaganda and my feelings</h2>
-            <p>Continuing with Jacques Ellul's book. How does propaganda work with our need to feel like authentic individuals? How about this quote?</p>
+            <p>Continuing with Jacques Ellul's book. How does propaganda work with our need to feel like authentic individuals? Another quote:</p>
             
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
                 <p>It appeals to me. It appeals to my common sense, my desires, and provokes my wrath and my indignation. It evokes my feelings of justice and my desire for freedom. It gives me violent feelings, which lift me out of the daily grind.</p>
