--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post18.html">18 Propaganda and facts</a></li>
+                <li><a href="post17.html">17 Propaganda and being seen</a></li>
                 <li><a href="post16.html">16 Propaganda and my feelings</a></li>
                 <li><a href="post15.html">15 Propaganda and what's already there</a></li>
                 <li><a href="post14.html">14 Back to the romantic</a></li>
