more ellul on bias and misinfo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post21.html">21 Propaganda and the real problem</a></li>
+                <li><a href="post20.html">20 Propaganda and the outsider</a></li>
+                <li><a href="post19.html">19 Propaganda and bias</a></li>
                 <li><a href="post18.html">18 Propaganda and facts</a></li>
                 <li><a href="post17.html">17 Propaganda and being seen</a></li>
                 <li><a href="post16.html">16 Propaganda and my feelings</a></li>
