added ai fascist posts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post21.html">21 The romantic ghost</a></li>
+                <li><a href="post20.html">20 AI and fascism</a></li>
+                <li><a href="post19.html">19 A big thank-you to Benjamin, but...</a></li>
+                <li><a href="post18.html">18 Theses on an AI notebook (a guest post)</a></li>
                 <li><a href="post17.html">17 Propaganda and being seen</a></li>
                 <li><a href="post16.html">16 Propaganda and my feelings</a></li>
                 <li><a href="post15.html">15 Propaganda and what's already there</a></li>
