--- a/post10.html
+++ b/post10.html
@@ -41,7 +41,7 @@
 <h3>Moral Center</h3>
 <p>Goodness here is democratic control over the material conditions of life: worker power, transparent and contestable decisions, consent‑respecting data practices, and ecological limits.</p>
 
-            <a href="index.html">Back to Home</a>
+            <p><a href="index.html">Back to Home</a> | <a href="post11.html">Next Post</a></p>
         </article>
     </main>
     <footer>
