--- a/post11.html
+++ b/post11.html
@@ -39,7 +39,7 @@
 <h3>Moral Center</h3>
 <p>Goodness is truthful conversation ordered to real communion. Mutual self‑gift before a someone who can answer and be responsible.</p>
 
-            <a href="index.html">Back to Home</a>
+            <p><a href="index.html">Back to Home</a> | <a href="post12.html">Next Post</a></p>
         </article>
     </main>
     <footer>
