--- a/post13.html
+++ b/post13.html
@@ -44,7 +44,7 @@
                 <li><strong>Integrity of making:</strong> romantic self‑gift to one’s call and vowed seriousness harmonize with Loftin’s defense of personed creativity (love’s attentive labor) against hollow imitation.</li>
             </ul>
 
-            <p><a href="index.html">Back to Home</a></p>
+            <p><a href="index.html">Back to Home</a> | <a href="post14.html">Next Post</a></p>
         </article>
     </main>
     <footer>
