--- a/post14.html
+++ b/post14.html
@@ -14,11 +14,11 @@
     <main>
         <article>
             <h2>14 Back to the romantic</h2>
-            <p>All that work I just did about evil makes me think I can just go back to the romantics and think about what they thought. If I do that, I'll catch in the same net a lot of what everyone feels about ai. I do think there's a lot of gut-feeling stuff going on here.</p>
-            <p>I don't buy it though. So much of the fight against ai is about sincerity and authenticity and some notion of a human spark.</p>
+            <p>All that work I just did about evil makes me think I can just go back to the romantics and think about what they thought. If I do that, I'll catch in the same net a lot of what everyone feels about AI. I do think there's a lot of gut-feeling stuff going on here.</p>
+            <p>I don't buy it though. So much of the fight against AI is about sincerity and authenticity and some notion of a human spark.</p>
             <p>Why don't I buy that? Because we're not living in the 1800's anymore.</p>
-            <p>Pretty crazy, though. All it took to get philosophy tube to hold hands with the catholics was to serve up a solid shared villain: ai chatbots.</p>
-            <a href="index.html">Back to Home</a>
+            <p>Pretty crazy, though. All it took to get philosophy tube to hold hands with the catholics was to serve up a solid shared villain: AI chatbots.</p>
+            <p><a href="index.html">Back to Home</a> | <a href="post15.html">Next Post</a></p>
         </article>
     </main>
     <footer>
