--- a/post3.html
+++ b/post3.html
@@ -16,7 +16,7 @@
             <h2>3 A guiding principle</h2>
             <p>My goal here is to be careful and start over from scratch and think about what I think of AI, now that I'm been absorbed in it as a writing professor and on my own time for a few years. It's a good idea sometimes to start over and pretend not to have any opinions yet. So that's what I'm trying to do.</p>
             <p>I do have a principle I don't expect to change, though. I think we should be free to experiment and try things out. I'm not afraid of AI. I don't feel distaste or anxiety or anger when I see AI stuff or use AI myself. I am often underwhelmed by what AI can do. I can see that gap between what AI boosters promise and what the tools do much of the time. But I'm inclined to use whatever I've got at hand for thinking about things I want to think about. And if that includes AI, that seems fine to me.</p>
-            <a href="index.html">Back to Home</a>
+            <p><a href="index.html">Back to Home</a> | <a href="post4.html">Next Post</a></p>
         </article>
     </main>
     <footer>
