--- a/post12.html
+++ b/post12.html
@@ -15,7 +15,7 @@
         <article>
             <h2>12 Evil as Imitative Negation</h2>
 
-<p>Same thing as the last two. I start with a general account of evil from a video. This one is <a href="https://www.youtube.com/watch?v=Fhb2WLXPEm0&t=2s">Mac Loftin’s Barthian Christianity</a>. Then I comment on the specific evil of ai from Loftin's pov.</p>
+<p>Same thing as the last two. I start with a general account of evil from a video. This one is <a href="https://www.youtube.com/watch?v=Fhb2WLXPEm0&t=2s">Mac Loftin’s Barthian Christianity</a>. Then I comment on the specific evil of AI from Loftin's pov.</p>
 
 <h3>Definition</h3>
 <p><strong>Evil = imitative negation of the good.</strong> It mimics creativity, love, and affirmation as <em>as‑if</em> acts, parasitically feeding on the real while corroding attention, affection, and the communal store of meaning.</p>
@@ -39,7 +39,7 @@
 <h3>Moral Center</h3>
 <p>Goodness is consent-honoring, personed creativity; love’s attentive labor; and safeguarding sacred speech and rites from simulacra.</p>
 
-            <a href="index.html">Back to Home</a>
+            <p><a href="index.html">Back to Home</a> | <a href="post13.html">Next Post</a></p>
         </article>
     </main>
     <footer>
