--- a/post15.html
+++ b/post15.html
@@ -23,7 +23,7 @@
 
             <p>This seems exactly right. We tend to think of propaganda as something alien that invades us. But Ellul is saying it's the opposite. It finds what's already moving in us and in our culture and gives that a push. It doesn't create the river, it builds the dams and channels to direct it.</p>
             <p>If Ellul is right, what would count as evil? And how is this related to AI?</p>            
-            <p><a href="index.html">Back to Home</a></p>
+            <p><a href="index.html">Back to Home</a> | <a href="post16.html">Next Post</a></p>
         </article>
     </main>
     <footer>
