--- a/post4.html
+++ b/post4.html
@@ -68,7 +68,7 @@ BLD   I am a complete wreck
 <p>I loved this kind of stuff when I was trying to get better at poetry and learning c++ at the same time. Code and poetry are compressions of language, letters and symbols that do something different than ordinary speech.</p>
 <p>That's just one example of why computers (to me) seem more like strange or distant neighbors to poetry and not enemies.</p>
 
-            <a href="index.html">Back to Home</a>
+            <p><a href="index.html">Back to Home</a> | <a href="post5.html">Next Post</a></p>
         </article>
     </main>
     <footer>
