--- a/post7.html
+++ b/post7.html
@@ -17,7 +17,7 @@
             <p>I've never heard any good arguments for why only humans can create art. Usually they come down to something like, "Only a human can have authentic human experiences, and only authentic human experiences can be the origin of art."</p>
             <p>See <a href="post6.html">here</a> for why I don't accept authenticity as necessary for art. Also, even if authentic human experience has to be the origin of art, this doesn't mean the actual creator or user of that authentic human experience has to be human.</p>
             <p>Most arguments I've heard about this really come down to saying, "Only humans can create art." And if someone asks, "Why?" the answer is "because only humans can create art."</p>
-            <a href="index.html">Back to Home</a>
+            <p><a href="index.html">Back to Home</a> | <a href="post8.html">Next Post</a></p>
         </article>
     </main>
     <footer>
