--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post24.html">24 We get this thinking in us - part 3</a></li>
+                <li><a href="post23.html">23 We get this thinking in us - part 2</a></li>
+                <li><a href="post22.html">22 We get this thinking in us - part 1</a></li>
                 <li><a href="post21.html">21 The romantic ghost</a></li>
                 <li><a href="post20.html">20 AI and fascism</a></li>
                 <li><a href="post19.html">19 A big thank-you to Benjamin, but...</a></li>
