--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post27.html">27 Preaching by prompt in the 16th century</a></li>
+                <li><a href="post26.html">26 The pastor as romantic author</a></li>
                 <li><a href="post25.html">25 Crossing Brooklyn Ferry</a></li>
                 <li><a href="post24.html">24 We get this thinking in us - part 3</a></li>
                 <li><a href="post23.html">23 We get this thinking in us - part 2</a></li>
