--- a/post24.html
+++ b/post24.html
@@ -22,7 +22,7 @@
                 <p>...whatever that system is whatever that informational organism that's doing the talking doesn't really live in my body or certainly not my body alone... it belongs to some collective system some informational system that a is larger than me...</p>
             </blockquote>
             <p>This is the system. McCoy wants to replace the current "informational organism" with a new one she believes is better. Her phrase "get this thinking in us" perfectly describes the process of that implantation. A structuralist would argue that this is what is always happening. We are always being spoken by a system larger than ourselves. The only question is which system it is.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post23.html">Previous Post</a></p>
+            <p><a href="index.html">Back to Home</a> | <a href="post25.html">Next Post</a></p>
         </article>
     </main>
     <footer>
