dropped some stuff

--- a/post28.html
+++ b/post28.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post 29 - My AI Notebook</title>
+    <title>Post 28 - My AI Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
@@ -13,9 +13,9 @@
     </header>
     <main>
         <article>
-            <h2>29 No wince in the syllabus, no wince in the student?</h2>
-            <p>What is a syllabus? And what do syllabi have to do with AI?</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post30.html">Next Post</a></p>
+            <h2>28 No wince in the writer, no wince in the reader?</h2>
+            <p>I'm working on this one. It's taking a while to think about it.</p>
+            <p><a href="index.html">Back to Home</a> | <a href="post29.html">Next Post</a></p>
         </article>
     </main>
     <footer>
