education and ai posts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <nav>
             <ul>
+                <!-- <li><a href="post30.html">30 But what about Whitman?</a></li> -->
                 <li><a href="post29.html">29 No wince in the syllabus, no wince in the student?</a></li>
                 <li><a href="post28.html">28 No wince in the writer, no wince in the reader?</a></li>
                 <li><a href="post27.html">27 Preaching by prompt in the 16th century</a></li>
