--- a/post28.html
+++ b/post28.html
@@ -14,7 +14,20 @@
     <main>
         <article>
             <h2>28 No wince in the writer, no wince in the reader?</h2>
-            <p>I'm working on this one. It's taking a while to think about it.</p>
+            <p>Pretty much every day I see something about AI in education. It's mostly negative. And it tends to rely on the Romantic idea of authorship this blog returns to quite a bit. To learn from a text is to connect with the living soul of the person who wrote it. It’s the core of the <a href="post9.html">Romantic worldview</a>. It's all over the place in this conversation/debate: <a href="https://www.youtube.com/watch?v=Aq_08Vsm5Z0&t=9s">"AI & The End of Education"</a>. One panelist argues that when we read, we are trying to understand what the author’s “mind was doing.” We're connecting with a “human being at the other end.” Without that, reading is impossible. And AI can't provide this because there is no person there. No soul, no communion, no education.</p>
+
+            <p>But the whole idea collapses under the weight of a simple quote thrown out by another panelist (quoting W.E.B. Du Bois).</p>
+
+            <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
+                <p>I sit with Shakespeare and he winces not.</p>
+            </blockquote>
+
+            <p>That’s it. That’s the whole argument. When you are reading Shakespeare, he does not feel your presence. He doesn’t react. He doesn’t care about your insights or your struggles. He is dead. The person is gone. All that remains is the text, a structure of words on a page. The "communion" we feel is a one-way projection. We are not connecting with a person; we are reading language a person left behind.</p>
+
+            <p>The panelist immediately follows this by saying, "I sit with Claude and he winces not." This is the move. It places Shakespeare and the AI on the same footing. In the act of reading, both are unwincing, unresponsive structures. If we can learn from one, why not the other? The Romantic objection to AI, that there’s "no one there," is based on the illusion that there <em>is</em> someone there when we read a book. But there isn't. There is only the reader, the text, and the wince of understanding or confusion that happens entirely inside the reader's own head.</p>
+
+            <p>The fear showing up in the teachers in this conversation -- it isn’t that AI lacks a human soul. The fear really comes from what we all know in a pragmatic way: the human connection we talk about when we talk about books has never been there to begin with. (Assuming, here, the author isn't someone the reader knows.) The author does not wince. Words can't wince.</p>
+
             <p><a href="index.html">Back to Home</a> | <a href="post29.html">Next Post</a></p>
         </article>
     </main>
