what about whitman

--- a/post30.html
+++ b/post30.html
@@ -14,7 +14,9 @@
     <main>
         <article>
             <h2>30 But what about Whitman?</h2>
-            <!-- post goes here -->
+            <p>But what about <a href="post25.html">Whitman</a>?</p>
+            <p>I know. I have the same question every day. I love that poem.</p>
+            <p>So I don't know. I'm trying to figure it out.</p>
             <p><a href="index.html">Back to Home</a> | <a href="post31.html">Next Post</a></p>
         </article>
     </main>
