--- a/post25.html
+++ b/post25.html
@@ -14,7 +14,7 @@
     <main>
         <article>
             <h2>25 Crossing Brooklyn Ferry</h2>
-            <p>I keep coming back to the same question: What is it we're afraid of losing? When people talk about the "soul of art" or the "human spark," what do they actually mean? The vocabulary often feels vague, more like a gut feeling than an argument. But there's one piece of writing that I think makes the case better than any essay: <a href="https://www.poetryfoundation.org/poems/45470/crossing-brooklyn-ferry">Walt Whitman's "Crossing Brooklyn Ferry.</a>"</p>
+            <p>When people talk about the "soul of art" or the "human spark," what do they actually mean? The vocabulary often feels vague, more like a gut feeling than an argument. But there's one piece of writing that I think makes the case better than any essay: <a href="https://www.poetryfoundation.org/poems/45470/crossing-brooklyn-ferry">Walt Whitman's "Crossing Brooklyn Ferry.</a>"</p>
 
             <p>The poem is a direct address to us, his future readers. From the very beginning, he makes a radical promise. He's not just describing a scene; he's claiming to be with us, right now:</p>
 
