intro to enoch in the blog

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post33.html">33 Something new and strange</a></li>
                 <li><a href="post32.html">32 Harari's AI future (Part 2)</a></li>
                 <li><a href="post31.html">31 Harari's AI future (Part 1)</a></li>
                 <li><a href="post30.html">30 But what about Whitman?</a></li>
