--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post36.html">36 A system running inside</a></li>
                 <li><a href="post35.html">35 Another quote</a></li>
                 <li><a href="post34.html">34 A quote</a></li>
                 <li><a href="post33.html">33 Something new and strange</a></li>
