--- a/post1.html
+++ b/post1.html
@@ -14,9 +14,9 @@
     <main>
         <article>
             <h2>1 This site</h2>
-            <p>I'm not opposed to writing things with AI. I've got things out there making the case that nobody should be expected to reveal whether they used AI to create something (anything) or did it "totally by hand." So I'm not against AI writing and I'm against forcing anyone into AI disclosures.</p>
-            <p>That said, this is all just my thoughts, typed out one word at a time.</p>
-            <p>The code, though, is a different story. I've been using Gemini's coding-in-the-terminal tool. It's free, and I've gotten the hang of it. I like it.</p>
+            <p>I'm not opposed to writing things with AI. I've told plenty of people my position. Nobody should have to reveal their writing methods. Write things totally "by hand," or write things with AI. I'm ok either way.</p>
+            <p>That said, this blog will be just my thoughts, typed out one word at a time. With some obvious exceptions.</p>
+            <p>The code is a different story. I've been using Gemini's coding-in-the-terminal tool. It's free, and I've gotten the hang of it. I like it.</p>
             <p><a href="index.html">Back to Home</a> | <a href="post2.html">Next Post</a></p>
         </article>
     </main>
