--- a/post2.html
+++ b/post2.html
@@ -14,7 +14,7 @@
     <main>
         <article>
             <h2>2 Another thing I'm doing</h2>
-            <p>Over the summer of 2025, I finished up a book (in collaboration with James Hutson) about AI from a more philosophical angle. When I finished the book, I realized it says quite a few things I'm not sure about. The book laid out a coherent thesis, and I worked on developing that thesis in a consistent way. But right after sending it off to the publisher, I started noticing things I'm not sure I believe. So I built a site with imaginary reviews and critiques of the book to help me think it all through.</p>
+            <p>Over the summer of 2025, I finished up a book (in collaboration with James Hutson) about AI from a more philosophical angle. I got it done and I sat back and thought about it. The book laid out a coherent thesis, and I worked on developing that thesis in a consistent way. But I sent it off to the publisher, and I started noticing fuzzy or just plain mixed-up things. A bunch of things might just be wrong. So I built a site with imaginary reviews and critiques of the book to help me think about it.</p>
             <p>Here's the link to that other site: <a href="https://buildlittleworlds.github.io/mind-machine-will/"><em>Mind, Machine, and Will</em></a></p>
             <p><a href="index.html">Back to Home</a> | <a href="post3.html">Next Post</a></p>
         </article>
