--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="post7.html">7 Only humans</a></li>
                 <li><a href="post6.html">6 Two things I reject</a></li>
                 <li><a href="post5.html">5 Starting...now</a></li>
-                <li><a href="post4.html">4 Something that puzzles me</a></li>
+                <li><a href="post4.html">4 This puzzles me</a></li>
                 <li><a href="post3.html">3 A guiding principle</a></li>
                 <li><a href="post2.html">2 Another thing I'm doing</a></li>
                 <li><a href="post1.html">1 This site</a></li>
