--- a/post4.html
+++ b/post4.html
@@ -13,9 +13,10 @@
     </header>
     <main>
         <article>
-            <h2>4 Something that puzzles me</h2>
-            <p>I believe people when they say they hate AI or feel automatic disgust or fear when they see anything to do with AI. I don't. I never have. It's something I can't explain. There are a lot of things about AI conversations I'm puzzled about. There will be time to write about them. For now, I've got one quick memory about computers that goes back to grad school and c++.</p>
-            <p>C++ is a programming language. People still use it for lots of things. It has a reputation for being hard to learn and use. Back in 1997 when I was working on my MFA in poetry at the University of Arkansas, c++ was the language someone learned for stuff other than HTML for websites. I was fascinated by c++ because of how it looked on the "page." Here's a random example:</p>
+            <h2>4 This puzzles me</h2>
+            <p>Why do people hate AI? Why do they feel real disgust or fear about AI? I don't. I never have. I can't explain it. I can't explain other people's reactions and I can't explain mine. It puzzles me in a really deep way. 
+            <p>Here's a memory from grad school about computers and C++ and poetry. Maybe it gets at something helpful.</p>                
+            <p>C++ is a programming language. People still use it for lots of things. It has a reputation for being hard to learn and hard to use. Back in 1997 I was working on my MFA in poetry at the University of Arkansas. C++ was the language for stuff other than HTML for websites. I was fascinated by C++ because of its look on the "page." Here's a random example:</p>
 
 <pre><code>
 #include &lt;iostream&gt;
@@ -50,7 +51,7 @@ int main() {
 }
 </code></pre>            
 
-<p>Here's something else. This is from a book by Hannah Weiner (1982) called <em>Code Poems</em>. "Code" here doesn't mean computer code. Weiner made her poems using the International Code of Signals, the language used by ships to communicate. Each three-letter signal is a command or a "function" that returns a specific phrase.</p>
+<p>Here's something else. This is from a book by Hannah Weiner (1982) called <em>Code Poems</em>. "Code" here doesn't mean computer code. Weiner made her poems using the International Code of Signals, the language used by ships to communicate. Each three-letter signal is a command or a "function." Each one returns a specific phrase.</p>
 <p>Here's a link to Weiner talking about her <a href="https://writing.upenn.edu/epc/authors/weiner/0-9.html">poetics.</a></p>
 <p>This is from the book:</p>
 <pre><code>
@@ -65,8 +66,8 @@ CJW   I have no long guns
 BLD   I am a complete wreck
 </code></pre>
             
-<p>I loved this kind of stuff when I was trying to get better at poetry and learning c++ at the same time. Code and poetry are compressions of language, letters and symbols that do something different than ordinary speech.</p>
-<p>That's just one example of why computers (to me) seem more like strange or distant neighbors to poetry and not enemies.</p>
+<p>I loved this kind of stuff. I was trying to get better at poetry and learning C++ at the same time. I felt no contradiction in that. (Some of my professors did.) Code and poetry are compressions of language. The letters and symbols in poetry and code do something different from ordinary speech.</p>
+<p>That's just one example of computers and poetry. Computers (to me) are more like strange or distant neighbors to poetry, not enemies.</p>
 
             <p><a href="index.html">Back to Home</a> | <a href="post5.html">Next Post</a></p>
         </article>
