made title a link

--- a/post2.html
+++ b/post2.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>My AI Notebook</h1>
-    </header>    
-    <main>
+<header>
+    <h1><a href="index.html">My AI Notebook</a></h1>
+</header>    <main>
         <article>
             <h2>2 Another thing I'm doing</h2>
             <p>Over the summer of 2025, I finished up a book (in collaboration with James Hutson) about AI from a more philosophical angle. I got it done and I sat back and thought about it. The book laid out a coherent thesis, and I worked on developing that thesis in a consistent way. But I sent it off to the publisher, and I started noticing fuzzy or just plain mixed-up things. A bunch of things might just be wrong. So I built a site with imaginary reviews and critiques of the book to help me think about it.</p>
