--- a/post31.html
+++ b/post31.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-<h1>My AI Notebook</h1>
+    <h1><a href="index.html">My AI Notebook</a></h1>
 </header>
 <main>
 <article>
