--- a/post4.html
+++ b/post4.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>My AI Notebook</h1>
-    </header>
+    <h1><a href="index.html">My AI Notebook</a></h1>
+</header>
     <main>
         <article>
             <h2>4 This puzzles me</h2>
