used claude to change styling and add templating process

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My AI Notebook</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display.swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <script src="template.js"></script>
 </head>
 <body>
-    <header>
+    <header data-template="header">
     <h1><a href="index.html">My AI Notebook</a></h1>
 </header>
     <main>
@@ -54,7 +55,7 @@
             </ul>
         </nav>
     </main>
-    <footer>
+    <footer data-template="footer">
         <p>&copy;2025 Daniel Plate</p>
     </footer>
 </body>
