--- a/post31.html
+++ b/post31.html
@@ -6,10 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Post 31 - My AI Notebook</title>
 <link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display.swap" rel="stylesheet">
-</head>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <script src="template.js"></script></head>
 <body>
-<header>
+<header data-template="header">
     <h1><a href="index.html">My AI Notebook</a></h1>
 </header>
 <main>
@@ -56,7 +56,7 @@
         <p><a href="index.html">Back to Home</a> | <a href="post32.html">Next Post</a></p>
     </article>
 </main>
-<footer>
+<footer data-template="footer">
     <p>&copy;2025 Daniel Plate</p>
 </footer>
 </body>
