--- a/post34.html
+++ b/post34.html
@@ -6,9 +6,10 @@
     <title>Post 34 - My AI Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <script src="template.js"></script>
 </head>
 <body>
-    <header>
+    <header data-template="header">
     <h1><a href="index.html">My AI Notebook</a></h1>
 </header>
     <main>
@@ -26,7 +27,7 @@
             <p><a href="index.html">Back to Home</a> | <a href="post35.html">Next Post</a></p>
         </article>
     </main>
-    <footer>
+    <footer data-template="footer">
         <p>&copy;2025 Daniel Plate</p>
     </footer>
 </body>
