this guys an idiom

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post39.html">39 This guy's an idiom</a></li>
                 <li><a href="post38.html">38 Is AI bullshit?</a></li>
                 <li><a href="post37.html">37 Sharpening the blur</a></li>
                 <li><a href="post36.html">36 A system running inside</a></li>
