added a bunch of summing up stuff

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post44.html">44 So what do I think?</a></li>
+                <li><a href="post43.html">43 A dance of symbols</a></li>
+                <li><a href="post42.html">42 An attempt at summing things up so far </a></li>
+                <li><a href="post41.html">41 A computational view of language</a></li>
+                <li><a href="post40.html">40 AI and bullshit, a moralist view </a></li>
                 <li><a href="post39.html">39 This guy's an idiom</a></li>
                 <li><a href="post38.html">38 Is AI bullshit?</a></li>
                 <li><a href="post37.html">37 Sharpening the blur</a></li>
