--- a/post2.html
+++ b/post2.html
@@ -13,9 +13,8 @@
     <h1><a href="index.html">My AI Notebook</a></h1>
 </header>    <main>
         <article>
-            <h2>2 Another thing I'm doing</h2>
-            <p>Over the summer of 2025, I finished up a book (in collaboration with James Hutson) about AI from a more philosophical angle. I got it done and I sat back and thought about it. The book laid out a coherent thesis, and I worked on developing that thesis in a consistent way. But I sent it off to the publisher, and I started noticing fuzzy or just plain mixed-up things. A bunch of things might just be wrong. So I built a site with imaginary reviews and critiques of the book to help me think about it.</p>
-            <p>Here's the link to that other site: <a href="https://buildlittleworlds.github.io/mind-machine-will/"><em>Mind, Machine, and Will</em></a></p>
+            <h2>2 Hallucinations and misinformation and AI</h2>
+            <p>This is near the top of the list of things I can't understand. I know why journalists and historians don't like AI hallucinations and misinformation. Their job is to get the facts straight. But creative writing? It's hallucations all the way down. So I don't understand why fiction writers and poets worry about AI making stuff up. It's what we do.</p>
             <p><a href="index.html">Back to Home</a> | <a href="post3.html">Next Post</a></p>
         </article>
     </main>
