hero song posts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post47.html">47 A hero for whom?</a></li>
+                <li><a href="post46.html">46 The cowboy and the thunder-god</a></li>
+                <li><a href="post45.html">45 Heroes and parades</a></li>
                 <li><a href="post44.html">44 So what do I think?</a></li>
                 <li><a href="post43.html">43 A dance of symbols</a></li>
                 <li><a href="post42.html">42 An attempt at summing things up so far </a></li>
