--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post50.html">50 Images</a></li>
+                <li><a href="post49.html">49 Just a kid like everyone else</a></li>
+                <li><a href="post48.html">48 But there's another reading</a></li>
                 <li><a href="post47.html">47 A hero for whom?</a></li>
                 <li><a href="post46.html">46 The cowboy and the thunder-god</a></li>
                 <li><a href="post45.html">45 Heroes and parades</a></li>
